--- a/frontend/src/Component/Bar.css
+++ b/frontend/src/Component/Bar.css
@@ -1,20 +1,46 @@
 h1 {
     font-family: "Times New Roman", Times, serif
 }
-
+h3{
+    color: var(--color-dark);
+}
 .sod{
-    box-shadow: 5px 10px 18px rgb(244, 26, 142);
-    padding: 5%;
-    margin: 5%;
+    box-shadow: 5px 10px 18px rgb(115, 114, 114);
+    padding: 10px;
+    margin-left: 50px;
+    margin-Top: 30px;
+    background: var(--color-low-white);
     border-radius: 30px;
     
 }
 
 .sod:hover{
-    box-shadow: 5px 10px 18px rgb(35, 219, 244);
-    padding: 25px;
-    margin: 30px;
+    box-shadow: 5px 10px 18px rgb(68, 70, 71);
+    padding: 15px;
+    margin-left: 50px;
+    margin-Top: 30px;
     border-radius: 30px;
+    transition: all 0.5s;
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+    .sod{
+        box-shadow: 5px 10px 18px rgb(115, 114, 114);
+        padding: 2%;
+        margin: 2%;
+        background: var(--color-white);
+        border-radius: 30px;
+        
+    }
+    .sod:hover{
+        box-shadow: 5px 10px 18px rgb(68, 70, 71);
+        padding: 2%;
+        margin: 2%;
+        border-radius: 30px;
+    }
 }
 
 .progress{
@@ -130,7 +156,7 @@ h1 {
     color: #1abc9c;
 }
 .progress.green .progress-left .progress-bar{
-    animation: loading-3 1.2s linear forwards 1.8s;
+    animation: loading-5 1.2s linear forwards 1.8s;
 }
 @keyframes loading-1{
     0%{
